syntax = "proto3";

package user;

option go_package = "pkg/protos/user;user";

service UserService {
  // Use EmptyMessage as the request type to indicate no inputs
  rpc GetUserInfo (EmptyMessage) returns (UserAttestationData);
}

// Define an empty message for requests without parameters
message EmptyMessage {}

message UserAttestationData {
  string attestation_token = 1;
  UserInfo user_info = 2;
}

message UserInfo {
  UnixInfo unix_info = 1;
  BasicAuth basic_auth = 2;
  External external = 3;
  Biometrics biometrics = 4;
}

message UnixInfo {
  string uid = 1;
  string user = 2;
  string gid = 3;
  string group = 4;
  repeated Supplementary supplementary = 5;
}

message Supplementary {
  string gid = 1;
  string group = 2;
}

message BasicAuth {
  string user = 1;
  string password = 2;
}

message External {}

message Biometrics {}
